--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -1056,7 +1056,7 @@
             </div>
           </button>
 
-          <button class="stat-btn qr-code">
+          <button class="stat-btn qr-code" onclick="window.location.href='qrscanner.html'">
             <i class="fa-solid fa-qrcode"></i>
             <div class="stat-content">
               <span class="stat-value">--</span>
