--- a/admin/html/qrscanner.html
+++ b/admin/html/qrscanner.html
@@ -39,8 +39,9 @@
     /* Main content padding */
     main {
       padding: 35px !important;
-      margin-left: 220px;
-      width: calc(100% - 220px);
+      margin-left: 16.666667%;
+      width: calc(100% - 16.666667%);
+      transition: margin-left 0.3s ease;
     }
 
     /* QR Scanner Container - FIXED POSITION */
