--- a/admin/html/product-management.html
+++ b/admin/html/product-management.html
@@ -1358,6 +1358,7 @@
                     class="btn btn-outline-soft-pink btn-sm"
                     id="headerRefreshBtn"
                     title="Reset Form/Refresh Page"
+                    data-bs-toggle="tooltip"
                   >
                     <i class="fas fa-sync-alt"></i>
                   </button>
