--- a/user/html/home.html
+++ b/user/html/home.html
@@ -8,203 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      :root {
-        --primary-pink: #ff69b4;
-        --light-pink: #ffb6c1;
-        --dark-pink: #ff1493;
-        --gold: #d4af37;
-        --light-gold: #f7e8c4;
-        --soft-white: #fefefe;
-        --light-gray: #f5f5f5;
-        --medium-gray: #e0e0e0;
-        --text-gray: #888;
-        --dark-gray: #555;
-        --card-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-        --gradient-bg: linear-gradient(
-          135deg,
-          #ffffff 0%,
-          #fff5f9 30%,
-          #ffe6f2 70%,
-          #ffd1dc 100%
-        );
-        --gradient-header: linear-gradient(
-          135deg,
-          rgba(255, 255, 255, 0.95) 0%,
-          rgba(255, 249, 252, 0.95) 100%
-        );
-        --gradient-card: linear-gradient(
-          135deg,
-          rgba(255, 255, 255, 0.95) 0%,
-          rgba(255, 249, 252, 0.95) 100%
-        );
-      }
-
-      body {
-        background: var(--gradient-bg);
-        min-height: 100vh;
-        font-family: "Montserrat", sans-serif;
-        overflow-x: hidden;
-        position: relative;
-        background-attachment: fixed;
-        padding-bottom: 80px;
-      }
-
-      body::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: radial-gradient(
-            circle at 10% 20%,
-            rgba(255, 255, 255, 0.8) 0%,
-            transparent 50%
-          ),
-          radial-gradient(
-            circle at 90% 80%,
-            rgba(255, 182, 193, 0.3) 0%,
-            transparent 50%
-          ),
-          radial-gradient(
-            circle at 50% 50%,
-            rgba(255, 105, 180, 0.1) 0%,
-            transparent 50%
-          );
-        z-index: -1;
-      }
-
-      body::-webkit-scrollbar {
-        display: none;
-      }
-
-      /* Header Styles */
-      .header {
-        background: var(--gradient-header);
-        box-shadow: 0 5px 20px rgba(255, 105, 180, 0.1);
-        padding: 15px 20px;
-        position: sticky;
-        top: 0;
-        z-index: 100;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(255, 182, 193, 0.2);
-      }
-
-      .brand-header {
-        text-align: center;
-        flex: 1;
-      }
-
-      .brand-name {
-        color: var(--primary-pink);
-        font-size: 26px;
-        font-weight: 600;
-        letter-spacing: 1.5px;
-        font-family: "Cormorant Garamond", serif;
-        margin-bottom: 2px;
-        text-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-      }
-
-      .brand-tagline {
-        color: var(--text-gray);
-        font-size: 12px;
-        letter-spacing: 1px;
-        font-weight: 300;
-      }
-
-      .user-section {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-      }
-
-      .user-greeting {
-        color: var(--dark-gray);
-        font-size: 14px;
-        font-weight: 500;
-      }
-
-      .profile-btn {
-        background: none;
-        border: none;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        color: var(--primary-pink);
-        background: rgba(255, 182, 193, 0.2);
-      }
-
-      .profile-btn:hover {
-        background: rgba(255, 182, 193, 0.3);
-        transform: scale(1.05);
-      }
-
-      .profile-btn i {
-        font-size: 18px;
-      }
-
-      /* Desktop Navigation - Top Position */
-      .desktop-nav {
-        display: flex;
-        justify-content: center;
-        gap: 30px;
-        padding: 15px 20px;
-        background: var(--gradient-header);
-        box-shadow: 0 2px 10px rgba(255, 105, 180, 0.1);
-        position: sticky;
-        top: 70px;
-        z-index: 99;
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(255, 182, 193, 0.2);
-      }
-
-      .nav-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-        cursor: pointer;
-        color: var(--text-gray);
-        transition: all 0.3s ease;
-        font-size: 12px;
-        padding: 8px 15px;
-        border-radius: 10px;
-        text-decoration: none;
-      }
-
-      .nav-item:hover {
-        color: var(--primary-pink);
-        background: rgba(255, 182, 193, 0.1);
-      }
-
-      .nav-item.active {
-        color: var(--primary-pink);
-        background: rgba(255, 182, 193, 0.15);
-      }
-
-      .nav-item i {
-        font-size: 20px;
-      }
-
+    
       /* Search Bar */
       .search-container {
         padding: 15px 20px;
@@ -1023,22 +833,24 @@
         <i class="fas fa-home"></i>
         <span>Home</span>
       </a>
-      <a class="nav-item" data-page="favorites">
+      <a href="favorites.html" class="nav-item" data-page="favorites">
         <i class="fas fa-heart"></i>
         <span>Favorites</span>
       </a>
-      <div class="nav-item" data-page="recommender">
+      <!-- In home.html navigation -->
+      <a href="recommender.html" class="nav-item" data-page="recommender">
         <i class="fas fa-star"></i>
         <span>Recommender</span>
-      </div>
+        <span class="tooltip">Smart Recommender</span>
+      </a>
       <a href="cart.html" class="nav-item" data-page="cart">
         <i class="fas fa-shopping-cart"></i>
         <span>Cart</span>
       </a>
-      <div class="nav-item" data-page="tryon">
+      <a href="try-on.html" class="nav-item" data-page="tryon">
         <i class="fas fa-camera"></i>
         <span>Virtual Try-On</span>
-      </div>
+      </a>
     </nav>
 
     <!-- Search Bar -->
@@ -1167,19 +979,20 @@
           <i class="fas fa-home"></i>
           <span>Home</span>
         </a>
-        <a class="nav-item" data-page="favorites">
+        <a href="favorites.html" class="nav-item" data-page="favorites">
           <i class="fas fa-heart"></i>
           <span>Favorites</span>
         </a>
-        <div class="nav-item" data-page="recommender">
+        <a href="recommender.html" class="nav-item" data-page="recommender">
           <i class="fas fa-star"></i>
           <span>Recommender</span>
-        </div>
+          <span class="tooltip">Smart Recommender</span>
+        </a>
         <a href="cart.html" class="nav-item" data-page="cart">
           <i class="fas fa-shopping-cart"></i>
           <span>Cart</span>
         </a>
-        <div class="nav-item" data-page="tryon">
+        <div href="try-on.html" class="nav-item" data-page="tryon">
           <i class="fas fa-camera"></i>
           <span>Try-On</span>
         </div>
