Added virtual try on of lipstick shades

--- a/user/html/favorites.html
+++ b/user/html/favorites.html
@@ -142,7 +142,7 @@
         <p class="brand-tagline">Elevate Your Everyday Glam.</p>
       </div>
       <div class="user-section">
-        <span class="user-greeting" id="user-greeting">Hi, User!</span>
+        <span class="user-greeting" id="user-greeting">Hi, Maria!</span>
         <button
           class="profile-btn"
           onclick="window.location.href='user_profile.html'"
