--- a/user/html/recommender.html
+++ b/user/html/recommender.html
@@ -1265,7 +1265,7 @@
         <p class="brand-tagline">Elevate Your Everyday Glam.</p>
       </div>
       <div class="user-section">
-        <span class="user-greeting" id="user-greeting">Hi, User!</span>
+        <span class="user-greeting" id="user-greeting">Hi, Maria!</span>
         <button
           class="profile-btn"
           onclick="window.location.href='user_profile.html'"
@@ -2027,7 +2027,7 @@
       function initFloatingProduct() {
         const productImages = [
           "/admin/uploads/product_images/blush-nobg.png",
-          "/admin/uploads/product_images/blush-nobg.png",
+          "/admin/uploads/product_images/concealer-nobg.png",
           "/admin/uploads/product_images/blush-nobg.png",
           "/admin/uploads/product_images/blush-nobg.png",
           "/admin/uploads/product_images/blush-nobg.png",
