Update home page navigation

--- a/user/html/home.html
+++ b/user/html/home.html
@@ -992,10 +992,10 @@
           <i class="fas fa-shopping-cart"></i>
           <span>Cart</span>
         </a>
-        <div href="try-on.html" class="nav-item" data-page="tryon">
+        <a href="try-on.html" class="nav-item" data-page="tryon">
           <i class="fas fa-camera"></i>
           <span>Try-On</span>
-        </div>
+        </a>
       </div>
     </nav>
 
