--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -1128,6 +1128,7 @@
           <div class="col-md-8">
             <div class="chart-container">
               <div class="chart-header">
+                <h5><i class="fas fa-chart-line"></i> Sales Overview</h5>
                 <div class="btn-group" role="group">
                   <button class="btn btn-outline-secondary btn-sm active">All Time</button>
                   <button class="btn btn-outline-secondary btn-sm">Daily</button>
