--- a/admin/html/qrscanner.html
+++ b/admin/html/qrscanner.html
@@ -873,6 +873,10 @@
 
         </div>
         <div class="nav flex-column">
+          <a href="admin.html" class="nav-link">
+            <i class="fa-solid fa-tachometer-alt"></i>
+            <span>Dashboard</span>
+          </a>
           <a href="product-management.html" class="nav-link">
             <i class="fa-solid fa-box"></i>
             <span>Product Management</span>
