--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -1058,6 +1058,10 @@
 
         </div>
         <div class="nav flex-column">
+          <a href="admin.html" class="nav-link">
+            <i class="fa-solid fa-tachometer-alt"></i>
+            <span>Dashboard</span>
+          </a>
           <a href="product-management.html" class="nav-link">
             <i class="fa-solid fa-box"></i>
             <span>Product Management</span>
@@ -1883,6 +1887,21 @@
 
             // Refresh data every 5 minutes (only dashboard data, not chart)
             setInterval(fetchDashboardData, 300000);
+          });
+
+          // Highlight active sidebar link based on current URL
+          document.addEventListener('DOMContentLoaded', () => {
+            const navLinks = document.querySelectorAll('.sidebar .nav-link');
+            const currentPath = window.location.pathname.split('/').pop();
+
+            navLinks.forEach(link => {
+              const linkPath = link.getAttribute('href');
+              if (linkPath === currentPath) {
+                link.classList.add('active');
+              } else {
+                link.classList.remove('active');
+              }
+            });
           });
         </script>
 </body>
