--- a/profile/html/user_profile.html
+++ b/profile/html/user_profile.html
@@ -618,7 +618,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <a href="home.html" class="back-btn">
+        <a href="../../user/html/home.html" class="back-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="brand-header">
@@ -1059,7 +1059,7 @@
             if (confirm("Are you sure you want to sign out?")) {
                 // Clear user data and redirect to login
                 localStorage.removeItem('username');
-                window.location.href = 'home.html';
+                window.location.href = '../../user/html/login.html';
             }
         }
 
