--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -521,11 +521,11 @@
     </div>
     <div class="user-section">
       <span class="user-greeting" id="user-greeting">Hi, Maria!</span>
-      <button class="profile-btn" onclick="window.location.href='user_profile.html'">
+      <button class="profile-btn" onclick="window.location.href='../../profile/html/user_profile.html'">
         <i class="fas fa-user"></i>
       </button>
     </div>
-    <button class="mobile-profile-btn" onclick="window.location.href='user_profile.html'">
+    <button class="mobile-profile-btn" onclick="window.location.href='../../profile/html/user_profile.html'">
       <i class="fas fa-user"></i>
     </button>
   </header>
