Cart and Checkout

--- a/user/html/favorites.html
+++ b/user/html/favorites.html
@@ -477,7 +477,7 @@
     <a href="favorites.html" class="nav-item active" data-page="favorites"><i class="fas fa-heart"></i><span>Favorites</span></a>
     <a href="recommender.html" class="nav-item" data-page="recommender"><i class="fas fa-star"></i><span>Recommender</span></a>
     <a href="cart.html" class="nav-item" data-page="cart"><i class="fas fa-shopping-cart"></i><span>Cart</span></a>
-    <a href="try-on.html" class="nav-item" data-page="tryon"><i class="fas fa-camera"></i><span>Try-On</span></a>
+    <a href="try-on.html" class="nav-item" data-page="tryon"><i class="fas fa-camera"></i><span>Virtual Try-On</span></a>
   </nav>
 
   <main>
