--- a/user/html/favorites.html
+++ b/user/html/favorites.html
@@ -712,9 +712,29 @@ async function addToCart(productId) {
   }
 }
 
+async function testFavoritesAPI() {
+  try {
+    const res = await fetch('../php/favorites-handler.php', { credentials: 'same-origin' });
+    const data = await res.json();
+    console.log('🔍 FAVORITES API FULL RESPONSE:', data);
+    
+    if (data.products && data.products.length > 0) {
+      console.log('📦 FIRST PRODUCT DETAILS:', data.products[0]);
+      console.log('🔄 ALL PRODUCT IDs:', data.products.map(p => p.id));
+    }
+    
+    return data;
+  } catch (err) {
+    console.error('❌ API Error:', err);
+  }
+}
+
+
 // --- Load Favorites on DOMContentLoaded ---
 document.addEventListener('DOMContentLoaded', async () => {
   await updateUserGreeting();
+  const apiData = await testFavoritesAPI();
+  
   const user = await getUserSession();
   const favoritesGrid = document.getElementById('favorites-grid');
 
