--- a/user/html/home.html
+++ b/user/html/home.html
@@ -15,7 +15,42 @@
     />
     <script src="../js/user-session.js"></script>
     <style>
-      /* Categories */
+      .nav-item {
+        position: relative; /* Add this */
+      }
+
+      .nav-cart-count {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        background: var(--primary-pink);
+        color: white;
+        border-radius: 50%;
+        width: 18px;
+        height: 18px;
+        font-size: 11px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+      }
+      .nav-cart-count.show {
+        display: flex;
+        animation: bounce 0.3s ease;
+      }
+
+      @keyframes bounce {
+        0% {
+          transform: scale(0.5);
+        }
+        50% {
+          transform: scale(1.2);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+      /* Categories - KEEP YOUR CATEGORIES STYLES */
       .categories {
         padding: 15px 20px;
         overflow-x: auto;
@@ -54,7 +89,7 @@
         background-color: var(--medium-gray);
       }
 
-      /* Products Grid */
+      /* Products Grid - USE FAVORITES STYLING */
       .products-container {
         padding: 20px;
         max-width: 1200px;
@@ -77,7 +112,8 @@
         content: "";
         position: absolute;
         bottom: 0;
-        left: 0;
+        left: 50%;
+        transform: translateX(-50%);
         width: 60px;
         height: 3px;
         background: linear-gradient(
@@ -128,23 +164,12 @@
       }
 
       .product-image {
-        transition: opacity 0.3s ease-in-out;
-      }
-
-      .fade-out {
-        opacity: 0;
-      }
-
-      .fade-in {
-        opacity: 1;
-      }
-
-      /* If you don't have these transition styles, add them */
-      .product-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         transition: opacity 0.4s ease-in-out;
       }
 
-      /* Class for fade transition */
       .product-image.fade-out {
         opacity: 0;
       }
@@ -157,27 +182,11 @@
         transform: scale(1.05);
       }
 
-      .product-image i {
-        font-size: 40px;
-      }
-
-      .product-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      .product-image i {
-        font-size: 40px;
-      }
-
-      /* Make product info section more compact */
       .product-info {
         padding: 20px;
         display: flex;
         flex-direction: column;
         flex-grow: 1;
-        /* Take remaining space */
         justify-content: space-between;
       }
 
@@ -220,7 +229,6 @@
       .stars i {
         color: #f3b8d3;
         font-size: 12px;
-        /* Smaller stars */
       }
 
       .rating-count {
@@ -241,31 +249,23 @@
         height: 20px;
         border-radius: 50%;
         border: 2px solid #f3b8d3;
-        /* Pink border */
         cursor: pointer;
         transition: all 0.3s ease;
-        /* Smooth transition for all properties */
         display: block;
         text-align: center;
       }
 
       .color-circle:hover {
         transform: scale(1.3);
-        /* Make it really big on hover */
         border-color: #ec4899;
-        /* Darker pink on hover */
         box-shadow: 0 4px 12px rgba(255, 157, 217, 0.932);
-        /* Enhanced shadow on hover */
       }
 
       .color-circle.active {
         border: 2px solid #ff3a9d;
-        /* Darker pink for active state */
         transform: scale(1.2);
-        /* Slightly bigger than normal */
       }
 
-      /* Compact product actions */
       .product-actions {
         display: flex;
         justify-content: space-between;
@@ -273,7 +273,6 @@
         padding-top: 12px;
         border-top: 1px solid #f0f0f0;
         margin-top: auto;
-        /* Push to bottom */
       }
 
       .like-btn {
@@ -281,7 +280,6 @@
         border: none;
         color: #ccc;
         font-size: 16px;
-        /* Slightly smaller */
         cursor: pointer;
         transition: color 0.3s ease;
         padding: 6px;
@@ -312,28 +310,11 @@
         transform: translateY(-1px);
       }
 
-      /* Fallback image styling */
       .no-image-placeholder {
         width: 80px;
         height: 80px;
         opacity: 0.3;
         object-fit: contain !important;
-      }
-
-      /* Add this to your CSS */
-      .low-stock-badge {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        background: #dc2626;
-        color: white;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 10px;
-        font-weight: bold;
-        z-index: 10;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
       }
 
       .stock-alert {
@@ -349,239 +330,7 @@
         z-index: 10;
       }
 
-      /* Make sure the image container has relative positioning */
-      .product-image-container {
-        position: relative;
-        width: 100%;
-        height: 280px;
-        background: #f8f8f8;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-      }
-
-      /* Floating Cart */
-      .floating-cart {
-        position: fixed;
-        bottom: 100px;
-        right: 20px;
-        background: linear-gradient(
-          135deg,
-          var(--primary-pink),
-          var(--dark-pink)
-        );
-        color: white;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 5px 15px rgba(255, 105, 180, 0.4);
-        cursor: pointer;
-        z-index: 90;
-        transition: transform 0.3s ease;
-      }
-
-      .floating-cart:hover {
-        transform: scale(1.1);
-      }
-
-      .cart-count {
-        position: absolute;
-        top: -5px;
-        right: -5px;
-        background-color: var(--gold);
-        color: white;
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 12px;
-        font-weight: 600;
-      }
-
-      /* Page Content */
-      .page-content {
-        display: none;
-        padding: 30px 25px;
-        min-height: 60vh;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .page-content.active {
-        display: block;
-      }
-
-      /* Beauty Recommender */
-      .recommender-container {
-        background: var(--gradient-card);
-        border-radius: 18px;
-        padding: 20px;
-        box-shadow: var(--card-shadow);
-        margin-bottom: 20px;
-        border: 1px solid rgba(255, 182, 193, 0.2);
-      }
-
-      .recommender-title {
-        font-size: 18px;
-        font-weight: 600;
-        margin-bottom: 15px;
-        color: var(--dark-gray);
-      }
-
-      .recommender-form {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-      }
-
-      .form-group {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-      }
-
-      .form-group label {
-        font-weight: 500;
-        color: var(--dark-gray);
-      }
-
-      .form-group select {
-        padding: 10px 15px;
-        border: 1px solid var(--medium-gray);
-        border-radius: 8px;
-        background-color: var(--light-gray);
-        font-family: "Montserrat", sans-serif;
-      }
-
-      .recommend-btn {
-        background: linear-gradient(
-          135deg,
-          var(--primary-pink),
-          var(--dark-pink)
-        );
-        color: white;
-        border: none;
-        border-radius: 12px;
-        padding: 12px;
-        font-weight: 500;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        box-shadow: 0 5px 15px rgba(255, 105, 180, 0.3);
-      }
-
-      .recommend-btn:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 8px 20px rgba(255, 105, 180, 0.4);
-      }
-
-      /* Virtual Try-On */
-      .virtual-tryon {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-      }
-
-      .tryon-container {
-        background: var(--gradient-card);
-        border-radius: 18px;
-        padding: 20px;
-        box-shadow: var(--card-shadow);
-        width: 100%;
-        max-width: 500px;
-        border: 1px solid rgba(255, 182, 193, 0.2);
-      }
-
-      .tryon-image {
-        width: 100%;
-        height: 300px;
-        background: linear-gradient(135deg, var(--light-pink), #ffe6f2);
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 20px;
-      }
-
-      .tryon-image i {
-        font-size: 60px;
-        color: var(--primary-pink);
-      }
-
-      .tryon-controls {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: center;
-      }
-
-      .tryon-btn {
-        background: var(--light-gray);
-        border: none;
-        border-radius: 20px;
-        padding: 8px 15px;
-        font-size: 14px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-      }
-
-      .tryon-btn.active {
-        background: linear-gradient(
-          135deg,
-          var(--primary-pink),
-          var(--dark-pink)
-        );
-        color: white;
-      }
-
-      /* Mobile Navigation */
-      .mobile-nav {
-        display: none;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: var(--gradient-header);
-        box-shadow: 0 -2px 10px rgba(255, 105, 180, 0.1);
-        padding: 10px 0;
-        z-index: 100;
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
-        border-top: 1px solid rgba(255, 182, 193, 0.2);
-      }
-
-      .mobile-nav-items {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-      }
-
-      /* Mobile Profile Button */
-      .mobile-profile-btn {
-        display: none;
-        background: none;
-        border: none;
-        width: 35px;
-        height: 35px;
-        border-radius: 50%;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        color: var(--primary-pink);
-        background: rgba(255, 182, 193, 0.2);
-      }
-
-      .mobile-profile-btn i {
-        font-size: 16px;
-      }
-
-      /* Responsive Design */
+      /* Responsive Design - USE FAVORITES VERSION */
       @media (min-width: 768px) {
         .products-grid {
           grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -602,18 +351,6 @@
       }
 
       @media (min-width: 1024px) {
-        .mobile-nav {
-          display: none;
-        }
-
-        body {
-          padding-bottom: 0;
-        }
-
-        .floating-cart {
-          display: flex;
-        }
-
         .products-container {
           max-width: 1200px;
           margin: 0 auto;
@@ -627,7 +364,6 @@
 
         .product-image-container {
           height: 280px;
-          /* Larger on desktop */
         }
 
         .product-name {
@@ -640,10 +376,6 @@
       }
 
       @media (max-width: 767px) {
-        .mobile-nav {
-          display: block;
-        }
-
         .products-grid {
           grid-template-columns: repeat(2, 1fr);
           gap: 15px;
@@ -651,39 +383,10 @@
 
         .product-image-container {
           height: 180px;
-          /* Slightly taller on tablets */
-        }
-      }
-
-      @media (max-width: 1023px) {
-        .mobile-nav {
-          display: block;
-        }
-
-        .products-grid {
-          grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-        }
-
-        .floating-cart {
-          display: flex;
-          /* Always show on mobile */
-        }
-
-        .user-section {
-          display: none;
-        }
-
-        .mobile-profile-btn {
-          display: flex;
         }
       }
 
       @media (max-width: 480px) {
-        .search-container,
-        .categories {
-          padding: 12px 15px;
-        }
-
         .products-container {
           padding: 15px;
         }
@@ -691,12 +394,10 @@
         .products-grid {
           grid-template-columns: repeat(2, 1fr);
           gap: 12px;
-          /* Tighter gap on very small screens */
         }
 
         .product-image-container {
           height: 160px;
-          /* Compact on mobile */
         }
 
         .product-info {
@@ -710,16 +411,8 @@
         .product-price {
           font-size: 15px;
         }
-
-        .floating-cart {
-          bottom: 80px;
-          right: 15px;
-          width: 55px;
-          height: 55px;
-        }
       }
 
-      /* Extra small devices (phones under 360px) */
       @media (max-width: 360px) {
         .products-grid {
           grid-template-columns: repeat(2, 1fr);
@@ -728,7 +421,6 @@
 
         .product-image-container {
           height: 140px;
-          /* Even more compact */
         }
 
         .product-info {
@@ -752,7 +444,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="home-page">
     <!-- Header -->
     <header class="header">
       <div class="brand-header">
@@ -795,6 +487,8 @@
       <a href="cart.html" class="nav-item" data-page="cart">
         <i class="fas fa-shopping-cart"></i>
         <span>Cart</span>
+        <div class="nav-cart-count">0</div>
+        <!-- ADD THIS -->
       </a>
       <a href="try-on.html" class="nav-item" data-page="tryon">
         <i class="fas fa-camera"></i>
@@ -832,11 +526,11 @@
       </section>
     </main>
 
-    <!-- Floating Cart - Always visible -->
+    <!-- Floating Cart - Always visible
     <div class="floating-cart" onclick="window.location.href='cart.html'">
       <i class="fas fa-shopping-cart"></i>
       <div class="cart-count">0</div>
-    </div>
+    </div> -->
 
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
@@ -857,6 +551,7 @@
         <a href="cart.html" class="nav-item" data-page="cart">
           <i class="fas fa-shopping-cart"></i>
           <span>Cart</span>
+          <div class="nav-cart-count">0</div>
         </a>
         <a href="try-on.html" class="nav-item" data-page="tryon">
           <i class="fas fa-camera"></i>
@@ -995,35 +690,35 @@
   `;
 
         card.innerHTML = `
-    <div class="product-image-container">
-      ${stockAlert}
-      <img
-        src="${previewImage}"
-        alt="${displayName}"
-        class="product-image"
-        data-default="${defaultImage}"
-        data-preview="${previewImage}"
-        onerror="this.onerror=null; this.src='${LOCAL_FALLBACK_IMAGE}'; this.classList.add('no-image-placeholder')">
+  <div class="product-image-container">
+    ${stockAlert}
+    <img
+      src="${previewImage}"
+      alt="${displayName}"
+      class="product-image"
+      data-default="${defaultImage}"
+      data-preview="${previewImage}"
+      onerror="this.onerror=null; this.src='${LOCAL_FALLBACK_IMAGE}'; this.classList.add('no-image-placeholder')">
+  </div>
+  <div class="product-info">
+    <div class="product-name">${displayName}</div>
+    <div class="product-price">${priceDisplay}</div>
+    ${ratingsHTML}
+    ${variantListHTML}
+    <div class="product-actions">
+      <button class="like-btn p-2 rounded-full transition-colors duration-200 ${
+        product.liked ? "liked" : ""
+      }" onclick="event.stopPropagation(); toggleLike('${product.id}')">
+        <i class="${product.liked ? "fas" : "far"} fa-heart"></i>
+      </button>
+      <button class="add-to-cart-btn" onclick="event.stopPropagation(); window.location.href='productdetail.html?productId=${
+        product.id
+      }'">
+        <i class="fas fa-shopping-cart"></i>Add to Cart
+      </button>
     </div>
-    <div class="product-info">
-      <div class="product-name">${displayName}</div>
-      <div class="product-price">${priceDisplay}</div>
-      ${ratingsHTML}
-      ${variantListHTML}
-      <div class="product-actions">
-        <button class="like-btn p-2 rounded-full transition-colors duration-200 ${
-          product.liked ? "liked" : ""
-        }" onclick="event.stopPropagation(); toggleLike('${product.id}')">
-          <i class="${product.liked ? "fas" : "far"} fa-heart"></i>
-        </button>
-        <button class="add-to-cart-btn" onclick="event.stopPropagation(); addToCart('${
-          product.id
-        }')">
-          <i class="fas fa-shopping-cart"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  `;
+  </div>
+`;
 
         card.addEventListener("click", (e) => {
           if (
@@ -1207,14 +902,6 @@
         }
       }
 
-      // Update cart count
-      function updateCartCount() {
-        const cartCount = document.querySelector(".cart-count");
-        if (cartCount) {
-          cartCount.textContent = cart.length;
-        }
-      }
-
       // Render favorites
       function renderFavorites() {
         const favoritesGrid = document.getElementById("favorites-grid");
@@ -1364,6 +1051,31 @@
         renderProducts(filteredProducts);
       }
 
+      async function updateCartCount() {
+        try {
+          const response = await fetch("../php/get-cart-count.php");
+          const data = await response.json();
+
+          if (data.success) {
+            const cartCounts = document.querySelectorAll(".nav-cart-count");
+            cartCounts.forEach((count) => {
+              count.textContent = data.count;
+              if (data.count > 0) {
+                count.classList.add("show"); // Use class instead of inline style
+              } else {
+                count.classList.remove("show");
+              }
+            });
+          }
+        } catch (error) {
+          console.log("Cart count update failed, setting to 0");
+          const cartCounts = document.querySelectorAll(".nav-cart-count");
+          cartCounts.forEach((count) => {
+            count.textContent = "0";
+            count.classList.remove("show");
+          });
+        }
+      }
       // --- INITIALIZATION ---
       document.addEventListener("DOMContentLoaded", async function () {
         // FIRST: Initialize user session (from user-session.js)
